# Portfolio

./: .gitignore  README  README.md
Assigning Students to Courses using Genetic Algorithm/: AnalyzePopu.m  CourseSelection_GA.m  FindInd.m  Main.m  OutputGenerator.m  Selections.m
Control/Helicopter Control/: helicopter_control.slx
Courses_Taken/: README.md
DeepLearningNanodegreeProgram/Bike_Sharing_Project/: Predicting_bike_sharing_data.ipynb  README.md  Your_first_neural_network.ipynb  my_answers.py
DeepLearningNanodegreeProgram/Deploying_a_Sentiment_Analysis_Model/: README.md  SageMaker_Project.html  deploying_a_sentiment_analysis.ipynb  project_index.html
DeepLearningNanodegreeProgram/Dog_Breed_Classifier/: PROJECT_REPORT.md  dog_app.html  dog_app.ipynb  dog_app.slides.html
DeepLearningNanodegreeProgram/Generate_TV_Scripts/: dlnd_tv_script_generation.html  dlnd_tv_script_generation.ipynb  generated_script_1.txt  helper.py  preprocess.p
Learning/Assigning Students to Courses using Genetic Algorithm/: CourseConverter.m  Fitness.m  PopulationInit.m  insert.m
Learning/Prosthetic Hand Controller and MLP/: movements.m
Legged_Locomotion/: course_note.txt
Legged_Locomotion/2DOFRobotDataCollection-master/: README.md
Legged_Locomotion/2DOFRobotDataCollection-master/test_driver/: CMakeLists.txt  package.xml  velocity_driver.cpp
Legged_Locomotion/2DOFRobotDataCollection-master/test_driver/msg/: Combined.msg
Legged_Locomotion/Biped_Walker/: walker_v1.slx  walker_v2.slx
Motor Drive/DC Motor Analysis/: Model1.slx  (+2 more)
Sensor Based Coverage/: coverage_agent.m
(+286 files in other folders)
